# world-tracing

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: infer_rgba.py  infer_scene.py  infer_textured_mesh.py  infer_video.py
examples/test_images/: MANIFEST.json  README.md
examples/test_images/dynamic/davis__breakdance_seg00/: _meta.json
examples/test_images/dynamic/davis__breakdance_seg01/: _meta.json
examples/test_images/dynamic/davis__dance-twirl_seg00/: _meta.json
examples/test_images/dynamic/davis__dance-twirl_seg01/: _meta.json
examples/test_images/dynamic/davis__tennis_seg00/: _meta.json
examples/test_images/dynamic/davis__tennis_seg01/: _meta.json
notebooks/: world_tracing_mps_inference.ipynb
notebooks/.ipynb_checkpoints/: world_tracing_mps_inference-checkpoint.ipynb
wt/: __init__.py  checkpoint.py  cli.py  data.py  inference.py  intrinsics.py  model.py  postproc.py  sampling.py  viz.py
wt/_core/: file_io.py  path_utils.py
wt/_core/arch/models/: backbone.py  blocks.py  config.py  head_utils.py  model_utils.py  patchhead_utils.py
wt/_core/arch/utils/: geometry_utils.py  math_utils.py
wt/_core/camera/: __init__.py
wt/_core/components/: flash_attention.py  nn_layers.py
wt/_core/diffusion/: constants.py
wt/_core/engine/: activation_checkpoint.py
wt/_core/models/wan_video/: layers.py
wt/_core/splat/utils/: embedding.py
wt/_core/utils/: torch_utils.py
wt/textured_mesh/: __init__.py  canon.py  pipeline.py  voxelise.py
